# tapss

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/dataset/: ag_news.yaml  dbpedia.yaml  imdb.yaml  sst2.yaml
configs/experiment/: baseline_comparison.yaml  cl_ag_sst2.yaml
configs/lora/: default.yaml
configs/model/: bert_base.yaml  distilbert.yaml  roberta_base.yaml
configs/protection/: adaptive.yaml  freeze_topk.yaml  lr_scaling.yaml  regularization.yaml  soft.yaml
configs/saliency/: activation.yaml  gradient.yaml  layer.yaml  perturbation.yaml  tapss.yaml
continual_learning/: __init__.py  baselines.py  ewc.py  pipeline.py
docs/: METHODOLOGY.md
evaluation/: __init__.py  metrics.py  tables.py  tracker.py
models/: __init__.py  registry.py  wrappers.py
peft_modules/: __init__.py  lora_trainer.py  protection.py
saliency/: __init__.py  activation.py  base.py  gradient.py  knowledge_probe.py  layer_contribution.py  perturbation.py  rankings.py  tapss.py
scripts/: compare_methods.py  compute_saliency.py  evaluate.py  generate_report.py  run_experiment.py  visualize.py
task_datasets/: __init__.py  base.py  loaders.py  preprocessing.py
tests/: conftest.py  test_metrics.py  test_protection.py  test_saliency.py
visualization/: __init__.py  continual.py  distributions.py  heatmaps.py  interactive.py  report.py
